# Contractiq-AI

CodeAtlas-main/CodeAtlas-main/: README.md
CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/: README.md
CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/backend/: README.md  codeatlas.db
CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/backend/app/api/routes/: ai.py  analyze.py
CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/backend/app/db/: models.py  session.py
CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/backend/app/services/ai/: embeddings.py  llm_client.py
CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/backend/app/services/analysis/: architecture.py  dependency_graph.py  flow_extractor.py
CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/backend/app/services/documentation/: deployment_guide.py
CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/backend/app/services/export/: html.py  json.py  markdown.py  pdf.py
CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/backend/app/services/ingestion/: file_scanner.py  ignore_rules.py  repo_loader.py
CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/backend/app/services/security/: license_checker.py  secrets_scanner.py
CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/backend/app/workers/: analyze_task.py  task_queue.py
CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/backend/cli/: maincli.py
CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/backend/docs/: roadmap.md
CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/frontend/: package-lock.json  package.json
CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/frontend/src/: main.jsx
CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/frontend/src/components/Layout/: Footer.jsx  Layout.jsx
CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/frontend/src/components/UI/: Card.jsx  Loader.jsx  (+1 more)
CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/frontend/src/hooks/: useAnalysis.js  useToast.js  useUpload.js
CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/frontend/src/pages/: AnalyzePage.jsx  ReportsPage.jsx
CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/frontend/src/styles/: components.css  main.css
CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/CodeAtlas-main/frontend/src/utils/: validators.js
CodeAtlas-main/CodeAtlas-main/backend/: main.py  pyproject.toml  requirements.txt
CodeAtlas-main/CodeAtlas-main/backend/app/api/: dependencies.py
CodeAtlas-main/CodeAtlas-main/backend/app/api/routes/: health.py  reports.py  upload.py
CodeAtlas-main/CodeAtlas-main/backend/app/core/: config.py  constants.py  security.py
CodeAtlas-main/CodeAtlas-main/backend/app/db/: crud.py
CodeAtlas-main/CodeAtlas-main/backend/app/services/ai/: analyze_ai.py  prompt_templates.py  summarizer.py
CodeAtlas-main/CodeAtlas-main/backend/app/services/analysis/: ast_parser.py  metrics.py
CodeAtlas-main/CodeAtlas-main/backend/app/services/documentation/: api_docs.py  diagrams.py  readme_generator.py
CodeAtlas-main/CodeAtlas-main/backend/app/services/ingestion/: zip_loader.py
CodeAtlas-main/CodeAtlas-main/backend/app/services/security/: vuln_patterns.py
CodeAtlas-main/CodeAtlas-main/backend/app/utils/: ignore_matcher.py  language_map.py
CodeAtlas-main/CodeAtlas-main/backend/cli/commands/: analyze.py  export.py
CodeAtlas-main/CodeAtlas-main/backend/docs/: api.md  architecture.md
CodeAtlas-main/CodeAtlas-main/backend/scripts/: cleanup_temp.py  seed_db.py
CodeAtlas-main/CodeAtlas-main/frontend/: vite.config.js
CodeAtlas-main/CodeAtlas-main/frontend/src/: App.jsx
CodeAtlas-main/CodeAtlas-main/frontend/src/components/Charts/: AnalysisChart.jsx
CodeAtlas-main/CodeAtlas-main/frontend/src/components/Layout/: Navbar.jsx
CodeAtlas-main/CodeAtlas-main/frontend/src/components/UI/: Button.jsx  ProgressBar.jsx
CodeAtlas-main/CodeAtlas-main/frontend/src/pages/: HomePage.jsx  ResultsPage.css  ResultsPage.jsx  UploadPage.jsx
CodeAtlas-main/CodeAtlas-main/frontend/src/utils/: apiClient.js  constants.js
